@@ -215,7 +215,7 @@ App::initApp(int argc, const char** argv)
     // load configuration
     loadConfig();
 
-    if (!argsBase().m_disableTray) {
+    if (!argsBase().m_disableTray && m_createTaskBarReceiver) {
 
         // create a log buffer so we can show the latest message
         // as a tray icon tooltip
